syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Microservice.Template.Communication.Grpc.Protos.Flights";

package flights;


service FlightsService {
	rpc CreateFlight (CreateRequest) returns (CreateResponse);
}

message CreateRequest {
	string flightNumber = 1;
	string from = 2;
	string to = 3;
	google.protobuf.Timestamp time = 4;
}

message CreateResponse {
	int32 id = 1;
}